--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -14,6 +14,7 @@ colorama = "^0.4.6"
 click-aliases = "^1.0.1"
 blessings = "^1.7"
 sgqlc = "^16.1"
+emoji = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
