--- a/auth-service/.aws-sam/build.toml
+++ b/auth-service/.aws-sam/build.toml
@@ -8,6 +8,6 @@ architecture = "arm64"
 handler = "proxy.lambda_handler"
 manifest_hash = ""
 packagetype = "Zip"
-functions = ["ProxyFunction"]
+functions = ["FirebaseTokenAuthorizer"]
 
 [layer_build_definitions]
