--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -15,6 +15,7 @@ click-aliases = "^1.0.1"
 blessings = "^1.7"
 sgqlc = "^16.1"
 emoji = "^2.2.0"
+aws-requests-auth = "^0.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
