--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "React-Redux but event driven.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
-  },
+  "scripts": {},
   "repository": {},
   "keywords": [],
   "author": "Yu Li",
@@ -23,7 +20,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "nodeman": "^1.1.2"
   },
   "dependencies": {}
 }
