--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ wtforms = "^3.0.1"
 flask-restful = "^0.3.9"
 werkzeug = "^2.2.2"
 chalice = "^1.27.3"
-black = "^22.12.0"
 strawberry-graphql = {extras = ["debug-server"], version = "^0.154.1"}
 pathos = "^0.3.0"
 pytest = "^7.2.1"
@@ -33,8 +32,14 @@ diskcache = "^5.4.0"
 stripe = "^5.0.0"
 schema = "^0.7.5"
 libtmux = "^0.21.0"
+boto3 = "^1.26.69"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+isort = "^5.12.0"
+pylint = "^2.16.1"
+black = "^23.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
