[Graphql] Add X-Service-Name header

--- a/graphql-service/apollo/Makefile
+++ b/graphql-service/apollo/Makefile
@@ -1,7 +1,14 @@
 # This makefile is not intended to be run directly, but is used by AWS SAM as a
 # build step.
+BUILD_DIR = $(ARTIFACTS_DIR)/..
 build-CopyDependencies:
-	mkdir -p "$(ARTIFACTS_DIR)/schema"
-	cp ./schema/*.graphql "$(ARTIFACTS_DIR)/schema"
-	mkdir -p "$(ARTIFACTS_DIR)/../ApolloServer/schema"
-	cp ./schema/*.graphql "$(ARTIFACTS_DIR)/../ApolloServer/schema"
+	echo BUILD_DIR = $(BUILD_DIR) 
+
+	echo 1 > "$(ARTIFACTS_DIR)/placeholder.txt"
+
+	mkdir -p "$(BUILD_DIR)/ApolloServer"
+	mkdir -p "$(BUILD_DIR)/ApolloServerIAM"
+
+	cp -r ./schema "$(BUILD_DIR)/ApolloServer/schema"
+	cp -r ./schema "$(BUILD_DIR)/ApolloServerIAM/schema"
+
