--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -10,7 +10,8 @@
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
     "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"tsc -p ./codegen-plugin && graphql-codegen --config codegen.yml\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sam": "cd ../ && make watch"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
     "@types/object-hash": "^3.0.2",
+    "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
     "decimal.js-light": "^2.5.1",
     "dynamoose": "^3.1.0",
