--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-hash-link": "^2.4.5",
     "axios": "^1.2.3",
     "firebase": "^9.16.0",
     "firebaseui": "^6.0.2",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-terminal-ui": "github:ylilarry/react-terminal-ui",
     "sort-by": "^1.2.0",
