--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-hash-link": "^2.4.5",
     "axios": "^1.2.3",
+    "commander": "^10.0.0",
     "firebase": "^9.16.0",
     "firebaseui": "^6.0.2",
     "localforage": "^1.10.0",
