[Graphql] Refactor RequestContext

--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -10,7 +10,7 @@ generates:
     config:
       useIndexSignature: true
       # More on this below!
-      contextType: "../server#RequestContext"
+      contextType: "../RequestContext#RequestContext"
       mapperTypeSuffix: "Data"
       # makeResolverTypeCallable: true
       # wrapFieldDefinitions: true
